main.css
a:hover {
  text-decoration: none;
}

a {
  color: #673AB7;
}

.container {
  font-family:'Sarabun', sans-serif;
  color:#313131;
}

#mainJumbotron {
  background-color:white;
  height:70vh;
}

#heroTextFirst {
  font-size: 72px;
  color: #BDBDBD;
  position: relative;
  opacity: 0;
  margin-left: 5%;
}

#heroTextSecond {
  font-size: 44px;
  position: relative;
  opacity: 0;
  margin-left: 10%;
}

#heroTextThird {
  font-size: 44px;
  margin-top: 5px;
  position: relative;
  opacity: 0;
  margin-left: 10%;
}

.test {
  position: relative;
}

#heroUnderline {
  position: absolute;
  background: #673AB7;
  left: 0;
  bottom: 0;
  height: 5px;
  width: 0%;
}


.project-jumbotron {
  color:#313131;
  background-color:#FFFFFF;
  height: 50vh;
}

.text-highlight {
  color: #673AB7;
}

h1 {
  font-family:'Sarabun', sans-serif;
}

h2 {
  font-family:'Sarabun', sans-serif;
}

h3 {
  font-family:'Sarabun', sans-serif;
  font-weight: 300;
  font-size: 60px;
  letter-spacing: 2px;
}

h4 {
  font-family:'Sarabun', sans-serif;
}

h5 {
  font-family:'Sarabun', sans-serif;
}

h6 {
  font-family:'Sarabun', sans-serif;
}

.navbar-custom {
  background-color:white;
}

.my-sticky-nav {
  position: -webkit-sticky;
  position: sticky;
  top: 0px;
}

.navbar-custom .navbar-brand {
  font-family:'Sarabun', sans-serif;
  color:#313131;
  font-size: 21px;
  letter-spacing: 1px;
}

.navbar-custom .navbar-nav .nav-link {
  font-size:16px;
  letter-spacing:2px;
  color:#7D7D7D;
  font-weight:500;
  font-family: 'Sarabun', sans-serif;
}

.navbar-custom .nav-item.active .nav-link,
.navbar-custom .nav-item:hover .nav-link {
    color: #673AB7;
}

.project-card {
  max-width: 500px;
  margin-bottom: 25px;
}

.project-image {
  width:100%;
  height:auto;
}

.project-card:hover {
  opacity: 0.7;
}



.caption {
  text-align:center;
  padding: 15px;
}

.project-name {
  font-family: 'Sarabun', sans-serif;
  color: #313131;
  font-size: 21px;
  font-weight: 300;
  margin-bottom: 0;
}

.project-type {
  font-family: 'Sarabun', sans-serif;
  color: #673AB7;
  font-size: 18px;
  font-weight: 500;
  margin-bottom: 0;
}

.project-page-card {
  margin-bottom: 15vh;
}

.project-section-navigation {
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 20px;
}

.sticky-project-nav {
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  z-index: 1;
  background-color: white;
}

.project-section-navigation-cell {
  padding: 20px;
}

.project-section-header {
  padding-top: 70px;
  margin-top: -70px;
}

.project-section-header:after {
  content:' ';
  display:block;
  border:3px solid #673AB7;
  width: 60px;
  margin-top: 2px;
}

footer {
  margin-top: 50px;
  margin-bottom: 50px;
  text-align: center;
}

.fa {
  padding: 10px;
  margin: 5px 2px;
  text-align: center;
  text-decoration: none;
  border-radius: 50%;
  background: grey;
  color: #FFFFFF;
}

.fa:hover {
    background: #673AB7;
    color: #FFFFFF;
    text-decoration: none;
}

.footer-email {
  color:grey;
}
.footer-email:hover {
  color:#673AB7;
  text-decoration: none;
}

.footer-copyright {
  color:grey;
}

